syntax = "proto3";
package com.music.grpc;
import "google/protobuf/empty.proto";

// Main service
service MusicService {
  rpc GetAll(google.protobuf.Empty) returns (GetMusicResponse) {};
  rpc GetById(GetMusicByIdRequest) returns (GetMusicByIdResponse) {};
  rpc Create(CreateMusicRequest) returns (CreateMusicResponse) {};
  rpc Update(UpdateMusicRequest) returns (UpdateMusicResponse) {};
  rpc Delete(DeleteMusicRequest) returns (DeleteMusicResponse) {};
}

// Messages

message Music {
  int32 id = 1;
  string title = 2;
  int32 authorId = 3;
  int32 nbNote = 4;
  int32 totalNote = 5;
}

message GetMusicResponse {
  repeated Music music = 1;
  int32 messageCode = 2;
}

message GetMusicByIdRequest {
  int32 music_id = 1;
}

message GetMusicByIdResponse {
  Music music = 1;
}

message CreateMusicRequest {
  Music music = 1;
}

message CreateMusicResponse {
  int32 messageCode = 1;
}

message UpdateMusicRequest {
  Music music = 1;
}

message UpdateMusicResponse {
  int32 messageCode = 1;
}

message DeleteMusicRequest {
  int32 music_id = 1;
}

message DeleteMusicResponse {
  int32 messageCode = 1;
}